--- a/user/templates/auth/register.html
+++ b/user/templates/auth/register.html
@@ -45,7 +45,7 @@
     
                 </div>
     
-                <h1>Войти в Блокнотик</h1>
+                <h1>Добро пожаловать в Блокнотик!</h1>
 
                 <form method="POST">
 
